--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 html {
   font-family:gidoleregular,sans-serif;
   text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  outline: 0;
 }
 noscript {
   position:fixed;
