--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
-
 @font-face {
     font-family: 'gidoleregular';
     src: url('fonts/gidole-regular.woff2') format('woff2'),
@@ -16,6 +14,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     font-weight: normal;
     font-style: normal;
 }
+
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 
 html {
   font-family:gidoleregular,sans-serif;
@@ -151,13 +151,6 @@ body {
 
 h1,h2,h3 {
   font-weight:400
-}
-
-h1 {
-  line-height:108px;
-  margin-top:72px;
-  margin-bottom:36px;
-  font-size:35vw;
 }
 
 h2, .charmap {
@@ -374,16 +367,16 @@ p, h1, h2, h3, span, .charmap {
 }
 
 #title {
+  font-size:36vw;
   line-height:90%;
-  letter-spacing:-.03em;
-  font-size:1em;
+  letter-spacing:-.8vw;
   margin-top:-50px;
 }
 
 #tag {
+  font-size:18vw;
   line-height:90%;
-  letter-spacing:-.02em;
-  font-size:.38em;
+  letter-spacing:-.2vw;
 }
 
 #playground h3 {
@@ -457,6 +450,14 @@ p, h1, h2, h3, span, .charmap {
         -ms-transform: scale(1.2);
             transform: scale(1.2);
   }
+  #title {
+    font-size:266px;
+  }
+
+  #tag {
+    font-size:133px;  
+  }
+
 }
 @media all and (max-width:650px) {
   .toggle {
