--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -233,7 +233,8 @@ nav > div {
 #world {
   font-family: 'gidolemono';
   font-size: 2rem;
-  height: 100%;
+  height: 400%;
+  top: -150%;
   overflow: hidden;
   left: -8000px;
   right: -8000px;
