--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -1,3 +1,4 @@
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
@@ -63,7 +64,6 @@ video {
          url('/fonts/Gidole-Mono.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 */
 
@@ -131,7 +131,7 @@ svg {
 }
 #uno p {
   opacity: 0;
-  animation: fadein .5s ease-in 2s forwards;
+  animation: fadein .5s ease-in 2.5s forwards;
 }
 #downarrow {
   font-size: 2em;  
@@ -142,7 +142,7 @@ svg {
   right: 0;
   bottom: 10px;
   text-align: center;
-  animation: fadein .5s ease-in 2.5s forwards;
+  animation: fadein .5s ease-in 3s forwards;
 }
 nav span {
   padding: .5rem 1.2rem .5rem 1.4rem;
@@ -199,8 +199,6 @@ nav > div {
   color: hsl(201, 50%, 5%);
 }
 #worldcenter {
-  opacity: 0;
-  animation: fadein .8s ease-in 0.2s forwards;
   position: relative;
   margin: 0 auto;
   white-space: nowrap;
